# MiniEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.fish  run.fish
lib/glad/include/glad/: gl.h
src/: main.cpp
